--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,7 +7,7 @@ on: [push]
 jobs:
   test-lint:
     name: Test and Lint
-    runs-on: Ubuntu-20.04
+    runs-on: windows-latest
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
