changes - docher n checks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: "3.11"
 services:
   app:
+    image: myapp
+    environment:
+      - MY_VAR=${recipe-app-api}
     build:
       context: .
       args:
