--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,5 +1,3 @@
----
-
 name: Checks
 
 on: [push]
@@ -8,15 +6,22 @@ jobs:
   test-lint:
     name: Test and Lint
     runs-on: windows-latest
+    env:
+      JOB_VAR: "job_value"
     steps:
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Test
+        shell: pwsh
         run: docker-compose run --rm app sh -c "python manage.py test"
+
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
+        shell: pwsh
+        run: docker-compose run --rm app sh -c "flake
