--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,11 +6,9 @@ jobs:
   test-lint:
     name: Test and Lint
     runs-on: windows-latest
-    env:
-      JOB_VAR: "job_value"
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      -  name: Login to Docker
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
