--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.11"
 services:
   app:
     image: myapp
@@ -10,5 +9,14 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
-    command:
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+    command: sh -c "python manage.py runserver 0.0.0.0:8000"
+
+  lint:  # Add this service for linting
+    image: myapp
+    build:
+      context: .
+      args:
+        - DEV="true"
+    volumes:
+      - ./app:/app
+    command: sh -c "flake8 . && black --check . && isort --check ."
