--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,7 +7,7 @@ jobs:
     name: Test and Lint
     runs-on: windows-latest
     steps:
-      -  name: Login to Docker
+      - name: Login to Docker
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
@@ -16,10 +16,37 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
       - name: Test
         shell: pwsh
         run: docker-compose run --rm app sh -c "python manage.py test"
 
       - name: Lint
         shell: pwsh
-        run: docker-compose run --rm app sh -c "flake
+        run: docker-compose run --rm app sh -c "flake8"
+
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-results
+          path: path/to/test/results
+
+      - name: Notify on Failure
+        if: failure()
+        uses: actions/github-script@v5
+        with:
+          script: |
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '🚨 Workflow failed! Please check the logs.'
+            })
