--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -40,14 +40,35 @@ jobs:
           name: test-results
           path: path/to/test/results
 
+      - name: Debug Context
+        uses: actions/github-script@v5
+        with:
+          script: |
+            console.log(context);
+
       - name: Notify on Failure
         if: failure()
         uses: actions/github-script@v5
         with:
           script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
+            // Fetch the latest pull request
+            const pulls = await github.rest.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '🚨 Workflow failed! Please check the logs.'
-            })
+              state: 'open',
+              sort: 'created',
+              direction: 'desc',
+              per_page: 1
+            });
+      
+            if (pulls.data.length > 0) {
+              const pullNumber = pulls.data[0].number;
+              await github.rest.issues.createComment({
+                issue_number: pullNumber,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: '🚨 Workflow failed! Please check the logs.'
+              });
+      } else {
+        console.log('No open pull requests found.');
+      }
