--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: path/to/test/results
+          path: path/to/test/results  # Update this path to match your test results location
 
       - name: Debug Context
         uses: actions/github-script@v5
@@ -60,7 +60,7 @@ jobs:
               direction: 'desc',
               per_page: 1
             });
-      
+
             if (pulls.data.length > 0) {
               const pullNumber = pulls.data[0].number;
               await github.rest.issues.createComment({
@@ -69,6 +69,6 @@ jobs:
                 repo: context.repo.repo,
                 body: '🚨 Workflow failed! Please check the logs.'
               });
-      } else {
-        console.log('No open pull requests found.');
-      }
+            } else {
+              console.log('No open pull requests found.');
+            }
