--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,74 +1,23 @@
 name: Checks
 
-on:
-  pull_request:  # Trigger on pull request events
+on: [push]
 
 jobs:
   test-lint:
     name: Test and Lint
     runs-on: windows-latest
     steps:
-      - name: Login to Docker
+      -  name: Login to Docker
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+        uses: actions/checkout@v2
 
       - name: Test
-        shell: pwsh
         run: docker-compose run --rm app sh -c "python manage.py test"
 
       - name: Lint
-        shell: pwsh
-        run: docker-compose run --rm app sh -c "flake8"
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: path/to/test/results  # Update this path to match your test results location
-
-      - name: Debug Context
-        uses: actions/github-script@v5
-        with:
-          script: |
-            console.log(context);
-
-      - name: Notify on Failure
-        if: failure()
-        uses: actions/github-script@v5
-        with:
-          script: |
-            // Fetch the latest pull request
-            const pulls = await github.rest.pulls.list({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              sort: 'created',
-              direction: 'desc',
-              per_page: 1
-            });
-
-            if (pulls.data.length > 0) {
-              const pullNumber = pulls.data[0].number;
-              await github.rest.issues.createComment({
-                issue_number: pullNumber,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: '🚨 Workflow failed! Please check the logs.'
-              });
-            } else {
-              console.log('No open pull requests found.');
-            }
+        run: docker-compose run --rm app sh -c "flake
